feat: implement role-based authorization and secure endpoints with JWT
- Added Role enum (USER, ADMIN)
- Updated User entity to include roles
- Enhanced JwtService to include roles in token
- Updated JwtFilter to extract roles from JWT
- Configured SecurityConfig for role-based access control
- Restricted POST /rooms to ADMIN only
- Allowed GET /rooms for authenticated users
- Integrated BCrypt for password hashing
- Improved AuthService to validate encrypted passwords

This update introduces role-based authorization and strengthens API security.